# LosDelDGIIM.github.io

./: .gitignore  .gitmodules  README.md  aboutUs.html  calendario.html  colaboracion.html  colaboracion_new.html  index.html  privacidad.html
.github/ISSUE_TEMPLATE/: bugs.yml  config.yml
.github/workflows/: automerge.yml
Bot/: bot.py  bot_antiguo.py  prompt_ocr.txt  requirements.txt
_assets/Scripts/: accordeon.js
_assets/Style/: header.css  index.css
assets/: portada.tex  preambulo.tex
assets/Scripts/: accordeon.js
assets/Style/: aboutUs.css  colaboracion.css  header.css  index.css
subjects/ED/Exámenes_Teoría/: 2021_Enero_Ej2.cpp  2021_Enero_Ej3.cpp  2021_Enero_Ej4.cpp  2022_Enero_Ej2.cpp  2022_Enero_Ej3.cpp  2022_Enero_Ej4.cpp  2022_Enero_Ej5.cpp  2023_Enero_Ej2.cpp  2023_Enero_Ej3.cpp  2023_Enero_Ej4.cpp  2023_Enero_Ej5.cpp  2023_Febrero_Ej2.cpp  2023_Febrero_Ej3.cpp  2023_Febrero_Ej4.cpp  2023_Febrero_Ej5.cpp  CMakeLists.txt  README.md
subjects/ED/Exámenes_Teoría/bintree/: usobintree
subjects/FBD/: Carga_Prueba_IOT.sql  Inserción_SQL.sql  PractFBD.sql  PractFBD_TMP.sql
subjects/FIS/: TipoTest.html  TipoTest.md
subjects/IA/: TipoTest.html  TipoTest.md  TipoTest_NoRandom.html
subjects/ISE/: TipoTest.html  TipoTest.md
subjects/Modelos Matemáticos I/: Generar_Telarañas.py  Generar_Telarañas_OyD.py
subjects/Topología I/: prueba.txt
subjects/_assets/: portada.tex  preambulo.tex  script_todos.sh
subjects/_plantillas/: Tipo Test.md
subjects/assets/: portada.tex  preambulo.tex
subjects/plantillas/: Tipo Test.md
(+1994 files in other folders)
