cmake_minimum_required(VERSION 3.27)
project(Exámenes_Teoría)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(2023_Enero_Ej2
        2023_Enero_Ej2.cpp)

add_executable(2023_Enero_Ej3
        2023_Enero_Ej3.cpp)

add_executable(2023_Enero_Ej4
        2023_Enero_Ej4.cpp)

add_executable(2023_Enero_Ej5
        2023_Enero_Ej5.cpp)
